add scan_a_qrcode key

--- a/src/translations/common.en.json
+++ b/src/translations/common.en.json
@@ -1,6 +1,7 @@
 {
   "hello": "Hello",
   "home": {
-    "header_title": "Home"
+    "header_title": "Home",
+    "scan_a_qrcode": "Scan a qrcode"
   }
 }
