--- a/src/translations/common.fr.json
+++ b/src/translations/common.fr.json
@@ -1,6 +1,7 @@
 {
   "hello": "Salut",
   "home": {
-    "header_title": "Accueil"
+    "header_title": "Accueil",
+    "scan_a_qrcode": "Scanner un qrcode"
   }
 }
