--- a/src/translations/routes.fr.json
+++ b/src/translations/routes.fr.json
@@ -3,6 +3,7 @@
     "title": "Accueil"
   },
   "coursesList": {
-    "title": "Parcours"
+    "title": "Parcours",
+    "start_course": "Commencer le parcours"
   }
 }
