Started to add better structure

--- a/src/translations/course.en.json
+++ b/src/translations/course.en.json
@@ -1,5 +1,8 @@
 {
   "finished": {
     "thanks": "Thank you for completing the course :)"
+  },
+  "nextButton": {
+    "label": "Continue"
   }
 }
