--- a/src/translations/course.fr.json
+++ b/src/translations/course.fr.json
@@ -1,5 +1,8 @@
 {
   "finished": {
     "thanks": "Merci pour avoir effectué le parcours :)"
+  },
+  "nextButton": {
+    "label": "Continuer"
   }
 }
