--- a/src/translations/routes.fr.json
+++ b/src/translations/routes.fr.json
@@ -5,5 +5,11 @@
   "coursesList": {
     "title": "Parcours",
     "start_course": "Commencer le parcours"
+  },
+  "courseSummary": {
+    "title": "Résumé",
+    "startButtonLabel": "Commencer l'aventure",
+    "durationLabel": "Durée",
+    "difficultyLabel": "Difficulté"
   }
 }
