--- a/src/translations/common.en.json
+++ b/src/translations/common.en.json
@@ -2,5 +2,12 @@
   "hello": "Hello",
   "home": {
     "header_title": "Home"
+  },
+  "selectCourse": {
+    "welcomeMessage": "Welcome to the Orsay Museum",
+    "listTitle": "Courses of the museum"
+  },
+  "courseSummary": {
+    "summary": "Summary"
   }
 }
